| 3.0.0 - 3.0.7 (these versions are discouraged)   | 3.6 or later      |
| 2.4.7                                            | 2.7 or later      |
| 1.5.7                                            | 2.6 - 2.7         |
+--------------------------------------------------+-------------------+


Version 3.3.3 - in development
------------------------------


Version 3.3.2 - January, 2026
-----------------------------
- Defined pyparsing-specific warning classes so that they can be selectively enabled
  or disabled without affecting warnings raised by other libraries in the same Python
  app:
  - `PyparsingWarning` - base warning for all pyparsing-specific warnings (inherits
    from `UserWarning`)
  - `PyparsingDeprecationWarning` - warning for using deprecated features (inherits
    from `PyparsingWarning` and `DeprecationWarning`)
  - `PyparsingDiagnosticWarning` - warning raised when pyparsing diagnostics are
    enabled and a diagnostic feature is used (inherits from `PyparsingWarning`)

- Added `as_datetime` parse action to `pyparsing.common` - a more generalized
  version of the `convert_to_datetime` parse action (supports any expression that extracts
  date/time fields into "year", "month", "day", etc. results names), and validates
  that the parsed fields represent a valid date and time.

- Added `iso8601_date_validated` and `iso8601_datetime_validated` expressions to
  `pyparsing.common`, which return a Python `datetime.datetime`

- Various performance improvements in `ParseResults` class and core functions, with
  10-20% performance overall.

- Added `regex_inverter` web page (using PyScript) to demonstrate using the `inv_regex.py`
  example.

- Expanded regex forms handled by the `examples/inv_regex.py` example:
  - named capturing groups (`?P<name>`)
  - partial repetition (`{m,}` and `{,n}`)
  - negated character classes (`[^...]`)

- Added `SPy` (Simplified Python) parser to examples.


Version 3.3.1 - December, 2025
------------------------------